WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267822
Fix layout tests in simulator
https://bugs.webkit.org/show_bug.cgi?id=267822
Summary
Fix layout tests in simulator
Per Arne Vollan
Reported
2024-01-20 16:17:57 PST
Fix layout tests in simulator
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-20 16:18:09 PST
<
rdar://problem/121324669
>
Per Arne Vollan
Comment 2
2024-01-20 16:19:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23018
EWS
Comment 3
2024-01-23 13:07:04 PST
Committed
273374@main
(47d87cd99fd2): <
https://commits.webkit.org/273374@main
> Reviewed commits have been landed. Closing PR #23018 and removing active labels.
Robert Jenner
Comment 4
2024-01-23 14:16:10 PST
***
Bug 267950
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug